--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ repo_url: https://github.com/pahmann/journal
 
 nav:
     - Home: index.md
+    - Links: links.md
+    - Events: events.md
 
 theme:
   name: 'material'
