Collecting some links
Signed-off-by: Philipp Ahmann <philipp.open@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
 
 theme:
   name: 'material'
-  logo: journal.png
+  logo: images/journal.png
   palette:
     primary: deep purple
     accent: deep purple
